# monkey_coding_dl_project

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  requirements.txt 
.github/workflows/: sync_with_hf.yml
app/: app.py
data/: data_stats.ipynb  datasets_params.py  datasets_stats.ipynb  fisrt_data.ipynb  preprocessor.py
datasets/: load_datasets.ipynb
main/: main.py
models/: models.ipynb  models.py  predict.py  train.ipynb
models/pretrained/: example.txt
notebooks/: datasets_stats.ipynb  mamba_vs_transformerts.ipynb  models.ipynb  models_comparations_second_dataset.ipynb  train.ipynb
pretrained/: config.json  vocab.json
src/app/: app.py  config.py
src/app/model_utils/: factory.py  manager.py
src/data/: datasets_stats.ipynb  preprocessor.py
src/data_utils/: config.py  dataset_generator.py  dataset_params.py  text_processor.py
src/models/: models.py  predict.py  train.ipynb
